--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,13 @@
 body {
-    background-color: #2a2b2f; 
+    background-image: url(../images/background.jpeg);
+    background-size: cover;
+    background-position: center;
     max-width: 400px;
+    min-height: 100vh;
     margin: auto;
+    margin-top: 20px;
     display: flex; 
     flex-direction: column;
-    justify-content: center; 
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
     color: #fff;
