--- a/public/css/top.css
+++ b/public/css/top.css
@@ -6,8 +6,8 @@
 
 .catch-copy{
     text-align: center;
-    color: #638297;
-    font-family: new-atten-round-book, sans-serif;
+    color: var(--color-navy);
+    font-family: var(--font-italic);
     font-style: italic;
     font-weight: 300;
     font-size: 18px;
@@ -22,7 +22,7 @@
 }
 
 h2{
-    color: #638297;
+    color: var(--color-navy);
 }
 
 #file-select{
@@ -31,7 +31,7 @@ h2{
     margin: 0 auto;
     width: 150px;
     height: 50px;
-    background-color: #e59941;
+    background-color: var(--color-orange);
     color: #fff;
     border: none;
     border-radius: 10px;
@@ -41,6 +41,6 @@ h2{
 } 
 
 p{
-    color: #638297;
+    color: var(--color-navy);
     margin: 0 20px;
 }
