--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,8 +16,12 @@ body {
     flex-direction: column;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
-    color: #fff;
+    color: var(--color-navy);
     text-align:center;
+}
+
+button{
+    color: #fff;
 }
 
 h1 {
