--- a/public/css/top.css
+++ b/public/css/top.css
@@ -31,6 +31,7 @@ h2{
     margin: 0 auto;
     width: 150px;
     height: 50px;
+    font-size: 16px;
     background-color: var(--color-orange);
     color: #fff;
     border: none;
@@ -39,6 +40,24 @@ h2{
     text-align: center;
     line-height: 50px;
 } 
+
+#submit-button{
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #ccc;
+    color: #fff;
+    font-weight: 800;
+    border: none;
+    border-radius: 10px;
+    cursor: not-allowed;
+    
+}
+#submit-button.valid{
+    background-color: var(--color-orange);
+    cursor: pointer;
+}
 
 p{
     color: var(--color-navy);
