--- a/public/css/images.css
+++ b/public/css/images.css
@@ -1,10 +1,15 @@
 .title{
     width: 150px;
     display: block;
-    margin: 20px auto 0 auto;
+    margin: 10px auto 0 auto;
 }
 
 #images{
+    display: none;
+}
+
+#images.visible{
+    display: block;
     scroll-snap-type: x mandatory;
     width: 80%;
     margin: 20px auto;
@@ -54,7 +59,7 @@
 
 #del-button.visible{
     display: block;
-    margin: 20px auto;
+    margin: 10px auto;
     padding: 10px 20px;
     font-size: 16px;
     background-color: var(--color-orange);
